[package]
name = "bolt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8" }
env_logger = {version = "0.10.0"}
log = { version = "0.4.20"}
chrono = { version = "0.4.26" }
nom = { version = "7.1.3" }
